--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,17 @@
-# =========================
-# Core Data & ML
-# =========================
 numpy>=1.23
 pandas>=1.5
-pyarrow>=12.0        
+pyarrow>=12.0
 scikit-learn>=1.2
 
-# =========================
-# Deep Learning (Two-Tower)
-# =========================
 torch>=2.0
+faiss-cpu>=1.7.4
 
-# =========================
-# Retrieval & Similarity
-# =========================
-faiss-cpu>=1.7.4     
+fastapi>=0.100,<1.0
+uvicorn[standard]>=0.22,<1.0
+pydantic>=2.0,<3.0
 
-# =========================
-# API Serving
-# =========================
-fastapi>=0.100
-uvicorn[standard]>=0.22
-pydantic>=2.0
-
-# =========================
-# UI Demo
-# =========================
-streamlit>=1.25
 requests>=2.31
-
-# =========================
-# Utilities
-# =========================
-tqdm>=4.65
 python-dotenv>=1.0
+tqdm>=4.65
 joblib>=1.3
-
-# =========================
-# Optional (nice to have)
-# =========================
-matplotlib>=3.7
+typing-extensions>=4.7
