--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
+
 numpy>=1.23
 pandas>=1.5
 pyarrow>=12.0
 scikit-learn>=1.2
 
-torch>=2.0
+torch==2.2.2
 faiss-cpu>=1.7.4
 
 fastapi>=0.100,<1.0
