--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
 
-numpy>=1.23
+numpy>=1.23,<2.0
 pandas>=1.5
 pyarrow>=12.0
 scikit-learn>=1.2
